# fiddle_64bit_version

./: .gitignore  CMakeLists.txt  README.md  package-info.json.in
fiddle~/: fft_mayer.c  fft_mayer.proto.h  fiddle~.c  trigtbl.h
fiddle~/fiddle~.xcodeproj/: project.pbxproj
fiddle~/fiddle~.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
fiddle~/fiddle~.xcodeproj/project.xcworkspace/xcshareddata/: fiddle~.xccheckout
fiddle~/fiddle~.xcodeproj/project.xcworkspace/xcuserdata/vb.xcuserdatad/: UserInterfaceState.xcuserstate
fiddle~/fiddle~.xcodeproj/xcuserdata/vb.xcuserdatad/xcschemes/: max-external.xcscheme
source/projects/fiddle_tilde/: CMakeLists.txt  fft_mayer.c  fft_mayer.proto.h  fiddle_tilde.c  trigtbl.h
